--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                         draggable="true" ondragstart="drag(event)" /></div>
             </div>
         </div>
-  
 
-    <div class="container1">
-        <div class="carrito">
-            <div class="carritoActual">
-                <img src="img/maleta-open.png" id="contenedor2" class="pictures" ondrop="drop(event)"
-                    ondragover="allowDrop(event)" />
+
+        <div class="container1">
+            <div class="carrito">
+                <div class="carritoActual">
+                    <img src="img/maleta-open.png" id="contenedor2" class="pictures" ondrop="drop(event)"
+                        ondragover="allowDrop(event)" />
+                </div>
+                <div class="button" id="totalMaleta" class="totalPrice"></div>
+                <!-- <div id="totalMaleta" class="totalPrice"></div> -->
             </div>
-            <div id="totalMaleta" class="totalPrice"></div>
-          
         </div>
-    </div>
     </div>
 
 
