falta cuadrar contador con maleta

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
                     <img src="img/maleta-open.png" id="contenedor2" class="pictures" ondrop="drop(event)"
                         ondragover="allowDrop(event)" />
                 </div>
-                <div class="button" id="totalMaleta" class="totalPrice"></div>
+                <div class="button">
+                <div id ="totalMaleta" class="totalPrice"></div>
                 <!-- <div id="totalMaleta" class="totalPrice"></div> -->
             </div>
         </div>
     </div>
 
-
+</div>
 
 
 
