añadida maleta y reset

--- a/index.html
+++ b/index.html
@@ -2,63 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="total">
-        <div class="container">
-            <div class="first">
-                <div class="contenedorItem"><img src="img/flores.png" id="flores" class="imagenDisplay" alt="flores"
-                        draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/vestido-black.png" id="vestido" class="imagenDisplay"
-                        alt="vestido" draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/chaqueta vaquera.png" id="chaqueta" class="imagenDisplay"
-                        alt="chaqueta" draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/sandalias.png" id="sandalias" class="imagenDisplay"
-                        alt="sandalias" draggable="true" ondragstart="drag(event)" /></div>
-            </div>
-            <div class="second">
-                <div class="contenedorItem"><img src="img/bañador-orange.png" id="bañador" class="imagenDisplay"
-                        alt="bañador" draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/vaq-men.png" id="vaquero" class="imagenDisplay" alt="vaquero"
-                        draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/vans-black.png" id="zapatillas" class="imagenDisplay"
-                        alt="zapatillas" draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/shirt-white.png" id="shirt" class="imagenDisplay" alt="shirt"
-                        draggable="true" ondragstart="drag(event)" /></div>
-            </div>
-            <div class="third">
-                <div class="contenedorItem"><img src="img/camara.png" id="camara" class="imagenDisplay" alt="camara"
-                        draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/neceser.png" id="neceser" class="imagenDisplay" alt="neceser"
-                        draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/ipad.png" id="ipad" class="imagenDisplay" alt="ipad"
-                        draggable="true" ondragstart="drag(event)" /></div>
-                <div class="contenedorItem"><img src="img/guia-ny.png" id="guia" class="imagenDisplay" alt="guia"
-                        draggable="true" ondragstart="drag(event)" /></div>
-            </div>
-        </div>
-
-
-        <div class="container1">
-            <div class="carrito">
-                <div class="carritoActual">
-                    <img src="img/maleta-open.png" id="contenedor2" class="pictures" ondrop="drop(event)"
-                        ondragover="allowDrop(event)" />
+        <div class="total">
+                <div class="container">
+                        <div class="first">
+                                <div class="contenedorItem"><img src="img/flores.png" id="flores" class="imagenDisplay"
+                                                alt="flores" draggable="true" ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/vestido-black.png" id="vestido"
+                                                class="imagenDisplay" alt="vestido" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/chaqueta vaquera.png" id="chaqueta"
+                                                class="imagenDisplay" alt="chaqueta" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/sandalias.png" id="sandalias"
+                                                class="imagenDisplay" alt="sandalias" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                        </div>
+                        <div class="second">
+                                <div class="contenedorItem"><img src="img/bañador-orange.png" id="bañador"
+                                                class="imagenDisplay" alt="bañador" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/vaq-men.png" id="vaquero"
+                                                class="imagenDisplay" alt="vaquero" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/vans-black.png" id="zapatillas"
+                                                class="imagenDisplay" alt="zapatillas" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/shirt-white.png" id="shirt"
+                                                class="imagenDisplay" alt="shirt" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                        </div>
+                        <div class="third">
+                                <div class="contenedorItem"><img src="img/camara.png" id="camara" class="imagenDisplay"
+                                                alt="camara" draggable="true" ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/neceser.png" id="neceser"
+                                                class="imagenDisplay" alt="neceser" draggable="true"
+                                                ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/ipad.png" id="ipad" class="imagenDisplay"
+                                                alt="ipad" draggable="true" ondragstart="drag(event)" /></div>
+                                <div class="contenedorItem"><img src="img/guia-ny.png" id="guia" class="imagenDisplay"
+                                                alt="guia" draggable="true" ondragstart="drag(event)" /></div>
+                        </div>
                 </div>
-                <div class="button">
-                <div id ="totalMaleta" class="totalPrice"></div>
-                <!-- <div id="totalMaleta" class="totalPrice"></div> -->
-            </div>
+
+
+                <div class="container1">
+                        <div class="carrito">
+                                <div class="carritoActual">
+                                        <img src="img/maleta-open.png" id="contenedor2" class="pictures"
+                                                ondrop="drop(event)" ondragover="allowDrop(event)" />
+                                </div>
+                        </div>
+                        <div id="totalMaleta" class="totalPrice"></div>
+                        <div><a class ="button" href = "">Borrar</a></div>
+
+                        </div>
+                </div>
+
+
         </div>
-    </div>
-
-</div>
 
 
 
@@ -71,7 +80,7 @@
 
 
 
-    <script src="js/main.js"></script>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
