pulsador a cero incrementado

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                         <div class="first">
                                 <div class="contenedorItem"><img src="img/flores.png" id="flores" class="imagenDisplay"
                                                 alt="flores" draggable="true" ondragstart="drag(event)" /></div>
+                                                <p><img alt="Cambiar imagen" height="198" onclick="this.src='img/flores.png';" onclick="this.src='img/bañador-orange';" src="img/bañador-orange.png" /></p>
                                 <div class="contenedorItem"><img src="img/vestido-black.png" id="vestido"
                                                 class="imagenDisplay" alt="vestido" draggable="true"
                                                 ondragstart="drag(event)" /></div>
@@ -62,9 +63,9 @@
                                 </div>
                         </div>
                         <div id="totalMaleta" class="totalPrice"></div>
-                        <div><a class ="button" href = "">Borrar</a></div>
+                        <div class="boton" onclick="vaciar()">Borrar</div>
 
-                        </div>
+                       
                 </div>
 
 
