modificación imágenes con fondo gris

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="third">
                                 <div class="contenedorItem"><img src="img/camara.png" id="camara" class="imagenDisplay"
                                                 alt="camara" draggable="true" ondragstart="drag(event)" /></div>
-                                <div class="contenedorItem"><img src="img/neceser.png" id="neceser"
+                                <div class="contenedorItem"><img src="img/neceser-.png" id="neceser"
                                                 class="imagenDisplay" alt="neceser" draggable="true"
                                                 ondragstart="drag(event)" /></div>
                                 <div class="contenedorItem"><img src="img/ipad.png" id="ipad" class="imagenDisplay"
