--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <div class="container">   
                         <div class="first">
                                 <div class="contenedorItem"><img src="img/bufanda.png" id="bufanda" class="imagenDisplay"
-                                                alt="flores" draggable="true" ondragstart="drag(event)"/></div>
-                                                <!-- <p><img alt="Cambiar imagen" height="198" onclick="this.src='img/flores.png';" onclick="this.src='img/bañador-orange';" src="img/bañador-orange.png" /></p> -->
+                                                alt="bufanda" draggable="true" ondragstart="drag(event)" /></div>
+                                        
                                 <div class="contenedorItem"><img src="img/vestido.png" id="vestido"
                                                 class="imagenDisplay" alt="vestido" draggable="true"
                                                 ondragstart="drag(event)" /></div>
